# LabMSIwR

./: LICENSE  README.md
Lab01-docker/: run_cpu.sh  run_gpu_nvidia.sh
Lab02-ROS/: run_cpu.sh  run_gpu_nvidia.sh  run_lab02.sh
Lab02-ROS/gazebo_camera_demo/: CMakeLists.txt  package.xml
Lab02-ROS/gazebo_camera_demo/launch/: camera.launch
Lab02-ROS/gazebo_camera_demo/urdf/: camera.urdf.xacro
Lab04-kalibr/: Dockerfile  msiwr_04_build.sh  msiwr_04_run_cpu.sh  msiwr_04_run_gpu_nvidia.sh  run_lab04.sh
Lab05-Localization2D/: Dockerfile  msiwr_05_build.sh  msiwr_05_run_cpu.sh  msiwr_05_run_gpu_nvidia.sh
Lab05-YOLOv8/: msiwr_05_run_cpu.sh  msiwr_05_run_gpu_nvidia.sh  run_lab05.sh
Lab06-LocalizationLiDAR3D/: msiwr_06_build.sh  msiwr_06_run_cpu.sh  msiwr_06_run_gpu_nvidia.sh
Lab06-YOLOv8_ROS2/: Dockerfile  msiwr_06_build.sh  opencv_cam_params.yaml  run_cpu.sh  run_gpu_nvidia.sh  run_lab06.sh
Lab07-ORBSLAM3/: Dockerfile  msiwr_07_build.sh  msiwr_07_run_cpu.sh  msiwr_07_run_gpu_nvidia.sh
Lab08-Deployment/: Dockerfile  Dockerfile-nvidia  msiwr_08_build.sh  run_gpu_nvidia.sh
Lab08-Kalman/: msiwr_08_build.sh  msiwr_08_run_cpu.sh  msiwr_08_run_gpu_nvidia.sh
Lab09-SemanticSegmentation/: Dockerfile  msiwr_09_build.sh  run_gpu_nvidia.sh  run_lab09.sh  train.py
Lab11-3DVisualLocalization/: Dockerfile  frame_trajectory.txt  msiwr_11_build.sh  run_lab11.sh
Lab12-2Dand2.5Dmaps/: Dockerfile  msiwr_12_build.sh  msiwr_12_run_cpu.sh  msiwr_12_run_gpu_nvidia.sh  turtlebot3_waffle_demo_basic.rviz  (+1 more)
Lab14-MapAndPlan3D/local_3d_planner/: CMakeLists.txt  README.md  package.xml
Lab14-MapAndPlan3D/local_3d_planner/backlog/: ClearanceObjective.cpp  ClearanceObjective.h  PathLengthAndClearanceObjective.h
Lab14-MapAndPlan3D/local_3d_planner/include/: Planner3D.h  ReadParameter.h  ValidityChecker.h
Lab14-MapAndPlan3D/local_3d_planner/include/planningObjectives/: BiasedRealVectorStateSpace.h  PlanningObjectives.h
Lab14-MapAndPlan3D/local_3d_planner/launch/: run_planner_3d.launch
Lab14-MapAndPlan3D/local_3d_planner/src/: Planner3D.cpp  Planner3DNode.cpp  ValidityChecker.cpp
Lab14-MapAndPlan3D/local_3d_planner/src/planningObjectives/: BiasedRealVectorStateSpace.cpp  PlanningObjectives.cpp
(+39 files in other folders)
